--- a/app/views/bravura_template_prime/shared/_hamburger_menu.html.erb
+++ b/app/views/bravura_template_prime/shared/_hamburger_menu.html.erb
@@ -1,56 +1,42 @@
-        <%# hamburger menu %>
-				<div class="flex lg:hidden">
-					<details class="menu-details">
-						<summary
-							class="inline-flex h-10 w-10 cursor-pointer items-center justify-center text-secondary-600 transition-all duration-200 rounded-cta-button-radius border border-secondary-200 hover:bg-secondary-100 hover:text-secondary-900 focus:outline-none focus:ring-2 focus:ring-secondary-300 focus:ring-offset-2"
-						>
-							<span class="sr-only">Open main menu</span>
-							<svg class="expanded-icon h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
-							</svg>
-							<svg class="collapsed-icon h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12H21M3 6H21M3 18H21"></path>
-							</svg>
-						</summary>
-						<div class="absolute z-10 w-full bg-white shadow-lg left-0 mt-2">
-							<div class="nav-link-items-mobile px-4 pb-4 sm:px-6">
-								<div class="-mx-2 space-y-1 pt-4">
-									<a
-										class="nav-link nav-link-left nav-link-GENERATED_PAGE nav-link-3fcd12e9-1b30-4b8d-9f02-76ed1ba17043 group flex items-center text-base rounded-cta-button-radius px-3 py-1.5 hover:bg-secondary-100 font-medium text-secondary-500 hover:text-secondary-900 focus:ring-secondary-900"
-										data-umami-event="Clicked Link: /all"
-										data-umami-href="/all"
-										href="/all"
-									>
-										Blog Home
-									</a>
-									<a
-										target="_blank"
-										rel="noopener"
-										href="https://feather.so"
-										class="nav-link nav-link-left nav-link-EXTERNAL_LINK nav-link-f227cb3e-379c-47a0-8e50-d3f8c847be45 group flex items-center text-base rounded-cta-button-radius px-3 py-1.5 hover:bg-secondary-100 font-medium text-secondary-500 hover:text-secondary-900 focus:ring-secondary-900"
-										data-umami-event="Clicked Link: https://feather.so"
-										data-umami-href="https://feather.so"
-									>
-										Some Link
-										<svg class="external-link-icon h-5 w-5 ml-2" viewBox="0 0 24 24" fill="none" stroke="currentColor" xmlns="http://www.w3.org/2000/svg">
-											<path d="M7 17L17 7M17 7H7M17 7V17" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
-										</svg>
-									</a>
-									<a
-										target="_blank"
-										rel="noopener"
-										href="https://feather.so/showcase"
-										class="nav-link nav-link-left nav-link-EXTERNAL_LINK nav-link-35fb055a-a5d6-4951-a3a3-522c5a1d2cc0 group flex items-center text-base rounded-cta-button-radius px-3 py-1.5 hover:bg-secondary-100 font-medium text-secondary-500 hover:text-secondary-900 focus:ring-secondary-900"
-										data-umami-event="Clicked Link: https://feather.so/showcase"
-										data-umami-href="https://feather.so/showcase"
-									>
-										Some Other Link
-										<svg class="external-link-icon h-5 w-5 ml-2" viewBox="0 0 24 24" fill="none" stroke="currentColor" xmlns="http://www.w3.org/2000/svg">
-											<path d="M7 17L17 7M17 7H7M17 7V17" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
-										</svg>
-									</a>
-								</div>
-							</div>
-						</div>
-					</details>
+<%# hamburger menu %>
+  <% links = [
+    { text: "Blog Home", href: "/", event: "Clicked Link: /", external: false },
+    { text: "Some Link", href: "https://feather.so", event: "Clicked Link: https://feather.so", external: true },
+    { text: "Some Other Link", href: "https://feather.so/showcase", event: "Clicked Link: https://feather.so/showcase", external: true }
+  ] %>		
+<div class="flex lg:hidden">
+	<details class="menu-details">
+		<summary
+			class="inline-flex h-10 w-10 cursor-pointer items-center justify-center text-secondary-600 transition-all duration-200 rounded-cta-button-radius border border-secondary-200 hover:bg-secondary-100 hover:text-secondary-900 focus:outline-none focus:ring-2 focus:ring-secondary-300 focus:ring-offset-2"
+		>
+			<span class="sr-only">Open main menu</span>
+			<svg class="expanded-icon h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+				<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+			</svg>
+			<svg class="collapsed-icon h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+				<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12H21M3 6H21M3 18H21"></path>
+			</svg>
+		</summary>
+		<div class="absolute z-10 w-full bg-white shadow-lg left-0 mt-2">
+			<div class="nav-link-items-mobile px-4 pb-4 sm:px-6">
+				<div class="-mx-2 space-y-1 pt-4">
+					<% links.each do |link| %>
+						<%= link_to link[:href], 
+							class: "nav-link nav-link-left nav-link-3fcd12e9-1b30-4b8d-9f02-76ed1ba17043 group flex items-center text-base rounded-cta-button-radius px-3 py-1.5 hover:bg-secondary-100 font-medium text-secondary-500 hover:text-secondary-900 focus:ring-secondary-900",
+							'data-umami-event': link[:event], 
+							'data-umami-href': link[:href], 
+							target: ("_blank" if link[:external]), 
+							rel: ("noopener" if link[:external]) do %>
+							<%= link[:text] %>
+							<% if link[:external] %>
+								<svg class="external-link-icon h-5 w-5 ml-2" viewBox="0 0 24 24" fill="none" stroke="currentColor" xmlns="http://www.w3.org/2000/svg">
+									<path d="M7 17L17 7M17 7H7M17 7V17" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+								</svg>
+							<% end %>
+						<% end %>
+					<% end %>
 				</div>
+			</div>
+		</div>
+	</details>
+</div>
