--- a/app/views/bravura_template_prime/shared/_nav_links.html.erb
+++ b/app/views/bravura_template_prime/shared/_nav_links.html.erb
@@ -4,7 +4,7 @@
 %>
 
 <% links = [
-  { text: "Blog Home", href: "/all", event: "Clicked Link: /all", external: false },
+  { text: "Blog Home", href: "/", event: "Clicked Link: /", external: false },
   { text: "Some Link", href: "https://feather.so", event: "Clicked Link: https://feather.so", external: true },
   { text: "Some Other Link", href: "https://feather.so/showcase", event: "Clicked Link: https://feather.so/showcase", external: true }
 ] %>
