--- a/app/views/bravura_template_prime/shared/_social_links.html.erb
+++ b/app/views/bravura_template_prime/shared/_social_links.html.erb
@@ -3,14 +3,18 @@
     <span class="sr-only">Twitter</span>
     <%= inline_svg_tag 'icons/twitter.svg', class: "h-6 w-6" %>
   <% end %>
-
+			
+<% if @presenter.get("footer.rss_feed").present? %>
   <%= link_to "/_feather/rss.xml", class: "inline-flex h-10 w-10 items-center justify-center text-secondary-600 transition-all duration-200 rounded-full hover:bg-primary-50 hover:text-primary-700", target: "_blank", rel: "noopener", 'umami-event': "Clicked Link: /_feather/rss.xml", 'umami-href': "/_feather/rss.xml" do %>
     <span class="sr-only">RSS Feed</span>
     <%= inline_svg_tag 'icons/rss.svg', class: "h-6 w-6" %>
   <% end %>
+<% end %>
 
-  <%= link_to "/_feather/sitemap.xml", class: "inline-flex h-10 w-10 items-center justify-center text-secondary-600 transition-all duration-200 rounded-full hover:bg-primary-50 hover:text-primary-700", target: "_blank", rel: "noopener", 'umami-event': "Clicked Link: /_feather/sitemap.xml", 'umami-href': "/_feather/sitemap.xml" do %>
-    <span class="sr-only">Sitemap</span>
-    <%= inline_svg_tag 'icons/sitemap.svg', class: "h-6 w-6" %>
-  <% end %>
+<% if @presenter.get("footer.sitemap").present? %>
+    <%= link_to "/_feather/sitemap.xml", class: "inline-flex h-10 w-10 items-center justify-center text-secondary-600 transition-all duration-200 rounded-full hover:bg-primary-50 hover:text-primary-700", target: "_blank", rel: "noopener", 'umami-event': "Clicked Link: /_feather/sitemap.xml", 'umami-href': "/_feather/sitemap.xml" do %>
+      <span class="sr-only">Sitemap</span>
+      <%= inline_svg_tag 'icons/sitemap.svg', class: "h-6 w-6" %>
+    <% end %>
+<% end %>
 </div>
