--- a/app/views/bravura_template_prime/shared/_social_links.html.erb
+++ b/app/views/bravura_template_prime/shared/_social_links.html.erb
@@ -1,4 +1,4 @@
-<div class="social-links flex space-x-4">
+<div class="social-links flex flex-wrap justify-center items-center gap-2 sm:gap-3 md:gap-4 max-w-screen-lg mx-auto">
 
 <%
 social_links = [
