--- a/app/views/bravura_template_prime/blog/index/_section_hero.html.erb
+++ b/app/views/bravura_template_prime/blog/index/_section_hero.html.erb
@@ -3,12 +3,9 @@
 	<div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
 		<div class="max-w-2xl mx-auto text-center">
 			<h1 class="whitespace-pre-wrap text-3xl font-bold tracking-tight text-secondary-900 sm:text-4xl lg:text-5xl">
-				<%# FIXME: Needs SettingsService %>
-			<%#= @blog_constants[:blog_hero_title] %>
-			<%= @presenter.get("general.blog_hero_title") %>
+			<%= @presenter.get("general.blog_hero_title") %> Browse Our Blog
 			</h1>
 			<h2 class="whitespace-pre-wrap text-base font-medium text-secondary-500 sm:text-lg lg:text-xl">
-				<%# FIXME: Needs SettingsService %>
 				<%= @presenter.get("general.blog_hero_description") %>
 
 			</h2>
