--- a/app/views/bravura_template_prime/shared/_hero.html.erb
+++ b/app/views/bravura_template_prime/shared/_hero.html.erb
@@ -2,10 +2,10 @@
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
     <div class="max-w-2xl mx-auto text-center">
       <h1 class="whitespace-pre-wrap text-3xl font-bold tracking-tight text-secondary-900 mt-3 sm:text-4xl lg:text-5xl">
-        Insight and advice from our expert team
+        <%= @presenter.get("general.blog_hero_title") %>
       </h1>
       <h2 class="whitespace-pre-wrap text-base font-medium text-secondary-500 mt-6 sm:text-lg lg:text-xl">
-        Find out how the best marketing automation tips and tricks work.
+        <%= @presenter.get("general.blog_hero_description") %>
       </h2>
     </div>
   </div>
