--- a/app/views/bravura_template_prime/shared/_hamburger_menu.html.erb
+++ b/app/views/bravura_template_prime/shared/_hamburger_menu.html.erb
@@ -1,9 +1,16 @@
 <%# hamburger menu %>
-  <% links = [
-    { text: "Blog Home", href: "/", event: "Clicked Link: /", external: false },
-    { text: "Some Link", href: "https://feather.so", event: "Clicked Link: https://feather.so", external: true },
-    { text: "Some Other Link", href: "https://feather.so/showcase", event: "Clicked Link: https://feather.so/showcase", external: true }
-  ] %>		
+<%
+  navigation = Settings::Navigation.find(@presenter.get("navigation.id"))
+  links = navigation.links.map do |link|
+    {
+      text: link.name,
+      href: link.link_kind == "external_link" ? link.external_link : (link.generated_page_type ? "/#{link.generated_page_type}" : "#"),
+      event: "Clicked Link: #{link.link_kind == "external_link" ? link.external_link : link.generated_page_type}",
+      external: link.link_kind == "external_link"
+    }
+  end
+%>
+
 <div class="flex lg:hidden">
 	<details class="menu-details">
 		<summary
