CHANGE: improved related posts

--- a/app/views/bravura_template_prime/blog/index.html.erb
+++ b/app/views/bravura_template_prime/blog/index.html.erb
@@ -3,7 +3,7 @@
 <section class="section normal-featured-articles-list bg-secondary-50 pb-12 sm:pb-16 lg:pb-20">
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
     <h2 class="text-xl font-bold text-secondary-900 sm:text-2xl">Featured posts</h2>
-    <%= render 'bravura_template_prime/blog/featured_articles' %>
+    <%= render 'bravura_template_prime/blog/featured_articles', articles: @featured_articles %>
   </div>
 </section>
 
