--- a/app/views/bravura_template_prime/blog/index/_featured_article_main.html.erb
+++ b/app/views/bravura_template_prime/blog/index/_featured_article_main.html.erb
@@ -1,3 +1,4 @@
+<%# app/views/bravura_template_prime/blog/index/_featured_article_main.html.erb %>
 <div class="normal-main-featured-article group relative">
 	<%= link_to blog_path(article), class: "article-cover aspect-w-16 aspect-h-8 block overflow-hidden bg-secondary-200 rounded-lg", data: { umami_event: "Clicked Link:
 	/6-ways-email-sms-are-changing-the-customer-experience", umami_href: "/6-ways-email-sms-are-changing-the-customer-experience" } do %>
