--- a/app/views/bravura_template_prime/blog/_related_posts.html.erb
+++ b/app/views/bravura_template_prime/blog/_related_posts.html.erb
@@ -6,25 +6,36 @@
       </div>
 
       <div class="grid max-w-md grid-cols-1 gap-x-8 gap-y-12 mx-auto mt-12 lg:max-w-none lg:grid-cols-3">
-          <% @post.related_posts.each do |related_post| %>
+          <% @related_posts.each do |related_post| %>
             <div class="normal-article group relative">
               <%= link_to blog_path(related_post), class: "article-cover aspect-w-16 aspect-h-8 block overflow-hidden bg-secondary-200 rounded-lg", 'umami-event': "Clicked Link: #{blog_path(related_post)}", 'umami-href': blog_path(related_post) do %>
-                <%# FIXME: is post.cover_image_url correct? %>
-                <%#= image_tag related_post.cover_image_url, class: "h-full w-full object-cover transition-all duration-100 group-hover:opacity-75", alt: related_post.title %>
+                <%= image_tag related_post.cover, class: "h-full w-full object-cover transition-all duration-100 group-hover:opacity-75", alt: "#{related_post.title} cover image"  %>
               <% end %>
               <div class="mt-6">
                 <div class="flex flex-wrap items-center space-x-2">
-                  <div class="article-author flex items-center">
-                    <div class="flex-shrink-0">
-                      <%= link_to author_path(related_post.author), 'umami-event': "Clicked Link: #{author_path(related_post.author)}", 'umami-href': author_path(related_post.author) do %>
-                        <%# FIXME: is related_post.author.avatar_url correct %>
-                        <%#= image_tag related_post.author.avatar_url, class: "h-5 w-5 mr-2 rounded-full", alt: related_post.author.name %>
-                      <% end %>
-                    </div>
-                    <div>
-                      <%= link_to related_post.author.name, author_path(related_post.author), 'umami-event': "Clicked Link: #{author_path(related_post.author)}", 'umami-href': author_path(related_post.author) %>
-                    </div>
-                  </div>
+<div class="article-author flex items-center">
+  <div class="flex-shrink-0">
+    <% if related_post.author && related_post.author.avatar.present? %>
+      <%= link_to author_path(related_post.author), 'umami-event': "Clicked Link: #{author_path(related_post.author)}", 'umami-href': author_path(related_post.author), aria: { label: "#{related_post.author.name}'s profile" } do %>
+        <%= image_tag related_post.author.avatar, 
+          class: "h-5 w-5 mr-2 rounded-full", 
+          alt: "#{related_post.author.name.initials} avatar" %>
+      <% end %>
+    <% else %>
+      <!-- Gray circle placeholder with accessibility support -->
+      <div class="h-5 w-5 mr-2 rounded-full bg-gray-300 flex items-center justify-center" role="img" aria-label="Author profile placeholder">
+        <span class="text-xs text-white font-bold">
+          <%= related_post.author&.name.initials || "?" %>
+        </span>
+      </div>
+    <% end %>
+  </div>
+  <div>
+    <% if related_post.author %>
+      <%= link_to related_post.author.name, author_path(related_post.author), 'umami-event': "Clicked Link: #{author_path(related_post.author)}", 'umami-href': author_path(related_post.author), aria: { label: "#{related_post.author.name}'s profile" } %>
+    <% end %>
+  </div>
+</div>
                   <span>/</span>
                   <time datetime="<%= related_post.published_at.iso8601 %>"><%= related_post.published_at.strftime("%b %-d, %Y") %></time>
                 </div>
