ADD: newletter_banner

--- a/app/views/bravura_template_prime/blog/index.html.erb
+++ b/app/views/bravura_template_prime/blog/index.html.erb
@@ -1,7 +1,7 @@
 <%= render 'bravura_template_prime/shared/hero' %>
 
 <section class="section normal-featured-articles-list bg-secondary-50 pb-12 sm:pb-16 lg:pb-20">
-    <%= render 'bravura_template_prime/blog/featured_articles', articles: @featured_articles %>
+    <%#= render 'bravura_template_prime/blog/featured_articles', articles: @posts.featured %>
 </section>
 
 <section id="all-posts" class="section normal-articles-list bg-white py-12 sm:py-16 lg:py-20">
