ADD: author views

--- a/app/views/bravura_template_prime/authors/index.html.erb
+++ b/app/views/bravura_template_prime/authors/index.html.erb
@@ -1,1 +1,2 @@
-<h1>This is the prime author index</h1>
+<%= render "bravura_template_prime/authors/index/hero" %>
+<%= render "bravura_template_prime/authors/index/body" %>
