--- a/app/views/layouts/bravura_template_prime/application.html.erb
+++ b/app/views/layouts/bravura_template_prime/application.html.erb
@@ -21,6 +21,8 @@
   </main>
 
   <%= render 'bravura_template_prime/shared/footer' %>
+
+  <%= yield :local_javascript %>
 </body>
   <!-- Your page content goes here -->
 <% end %>
