--- a/app/views/bravura_template_prime/blog/show/_section_hero.html.erb
+++ b/app/views/bravura_template_prime/blog/show/_section_hero.html.erb
@@ -31,7 +31,7 @@
 							<svg class="h-5 w-5 flex-shrink-0 text-secondary-400" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 								<path d="M9 18L15 12L9 6" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
 							</svg>
-							<%= link_to "Posts", root_path, class: "truncate text-sm font-medium text-secondary-500 ml-4 text-left hover:text-secondary-700", data: { umami_event: "Clicked Link: /", umami_href: "/" } %>
+							<%= link_to "Posts", blog_path, class: "truncate text-sm font-medium text-secondary-500 ml-4 text-left hover:text-secondary-700", data: { umami_event: "Clicked Link: /", umami_href: "/" } %>
 						</div>
 					</li>
 					<li>
