--- a/app/views/bravura_template_prime/shared/_breadcrumbs.html.erb
+++ b/app/views/bravura_template_prime/shared/_breadcrumbs.html.erb
@@ -9,7 +9,7 @@
     <li>
       <div class="flex items-center">
         <%= inline_svg_tag 'icons/chevron-right.svg', class: "h-5 w-5 flex-shrink-0 text-secondary-400" %>
-        <%= link_to "Posts", blog_path, class: "ml-1 text-sm font-medium text-secondary-500 hover:text-secondary-700 md:ml-2" %>
+        <%= link_to "Posts", blog_index_path, class: "ml-1 text-sm font-medium text-secondary-500 hover:text-secondary-700 md:ml-2" %>
       </div>
     </li>
     <li aria-current="page">
