--- a/app/views/bravura_template_prime/blog/show/_section_hero.html.erb
+++ b/app/views/bravura_template_prime/blog/show/_section_hero.html.erb
@@ -56,7 +56,7 @@
 								<% if @article.author.avatar.attached? %>
 									<%= image_tag @author.avatar, alt: @article.author.name, class: "h-8 w-8 mr-2 rounded-full" %>
 								<% else %>
-									<%= image_tag "default_avatar.jpg", alt: @article.author.name, class: "h-8 w-8 mr-2 rounded-full" %>
+									<%= image_tag "bravura_template_prime/default_avatar.jpg", alt: @article.author.name, class: "h-8 w-8 mr-2 rounded-full" %>
 								<% end %>
 							<% end %>
 						</div>
