FIX: path for default_avatar was wrong on a show page

--- a/app/views/bravura_template_prime/blog/show/_section_article_author.html.erb
+++ b/app/views/bravura_template_prime/blog/show/_section_article_author.html.erb
@@ -7,7 +7,7 @@
     <% if author.avatar.attached? %>
       <%= image_tag author.avatar, alt: author.name, class: "inline-block h-16 w-16 flex-shrink-0 object-cover rounded-full lg:h-24 lg:w-24" %>
     <% else %>
-      <%= image_tag "default_avatar.jpg", alt: "Default Avatar", class: "inline-block h-16 w-16 flex-shrink-0 object-cover rounded-full lg:h-24 lg:w-24" %>
+      <%= image_tag "bravura_template_prime/default_avatar.jpg", alt: "Default Avatar", class: "inline-block h-16 w-16 flex-shrink-0 object-cover rounded-full lg:h-24 lg:w-24" %>
     <% end %>
   <% end %>
   <div class="mt-6 text-center sm:ml-6 sm:mt-0 sm:text-left">
