CHANGE: temp replace of default avatar

--- a/app/views/bravura_template_prime/blog/show/_section_hero.html.erb
+++ b/app/views/bravura_template_prime/blog/show/_section_hero.html.erb
@@ -56,7 +56,11 @@
 								<% if @article.author.avatar.attached? %>
 									<%= image_tag @author.avatar, alt: @article.author.name, class: "h-8 w-8 mr-2 rounded-full" %>
 								<% else %>
-									<%= image_tag "bravura_template_prime/default_avatar.jpg", alt: @article.author.name, class: "h-8 w-8 mr-2 rounded-full" %>
+									<%#= image_tag "bravura_template_prime/default_avatar.jpg", alt: @article.author.name, class: "h-8 w-8 mr-2 rounded-full" %>
+									<%# FIXME: path for image above is not working %>
+									<%= image_tag "https://images.unsplash.com/photo-1590086782957-93c06ef21604?w=300&h=300&fit=crop", 
+              							alt: "Man wearing green polo shirt", 
+              							class: "h-full w-full object-cover" %>         
 								<% end %>
 							<% end %>
 						</div>
