--- a/app/views/bravura_template_prime/blog/show.html.erb
+++ b/app/views/bravura_template_prime/blog/show.html.erb
@@ -1,34 +1,5 @@
-<section class="bg-secondary-50 py-12 sm:py-16 lg:py-20">
-  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-    <div class="max-w-2xl mx-auto text-center">
-      <%= render 'bravura_template_prime/shared/breadcrumbs' %>
+<%= render "bravura_template_prime/blog/show/hero" %>
 
-      <h1 class="current-post-title text-3xl font-bold tracking-tight text-secondary-900 mt-8 sm:text-4xl lg:text-5xl">
-        <%= @post.title %>
-      </h1>
-
-      <p class="mt-4 text-xl text-secondary-600">
-        <%= @post.excerpt %>
-      </p>
-
-      <%= render 'bravura_template_prime/blog/post_meta', post: @post %>
-    </div>
-  </div>
-</section>
-
-<section class="current-post-cover bg-white mt-12 sm:mt-16 lg:mt-20">
-  <div class="relative">
-    <div class="absolute h-1/3 bg-secondary-50 inset-0"></div>
-    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-      <div class="article-cover-wrapper relative">
-        <div class="absolute rotate-180 opacity-30 blur-lg bg-conic-gradient -inset-1" style="filter:blur(16px)"></div>
-        <div class="article-cover aspect-w-16 aspect-h-8 relative overflow-hidden rounded-lg">
-          <%= image_tag @post.cover, class: "h-full w-full object-cover", alt: "cover image for #{@post.title}"  %>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
 
 <section class="normal-post-content bg-white py-12 sm:py-16 lg:py-20">
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
