--- a/app/views/bravura_template_prime/blog/_articles_grid.html.erb
+++ b/app/views/bravura_template_prime/blog/_articles_grid.html.erb
@@ -1,8 +1,14 @@
+<%# app/views/bravura_template_prime/blog/_articles_grid.html.erb %>
 <div class="lg:col-span-9">
-  <div class="articles-grid grid grid-cols-1 gap-8 sm:grid-cols-2 lg:gap-y-12 xl:grid-cols-3">
-    <% Post.all.each do |post| %>
-      <%= render 'bravura_template_prime/shared/article_card', article: post %>
-    <% end %>
-  </div>
-  <%#= render 'bravura_template_prime/shared/pagination' %>
+  <% if articles.any? %>
+    <div class="articles-grid grid grid-cols-1 gap-8 sm:grid-cols-2 lg:gap-y-12 xl:grid-cols-3">
+    <% articles.each do |article| %>
+      <%= render 'bravura_template_prime/shared/article_card', article: article %>
+    <% end %>    </div>
+    <%# Add pagination here if needed %>
+  <% else %>
+    <p>No articles found.</p>
+  <% end %>
+    <%#= render 'bravura_template_prime/shared/pagination' %>
+
 </div>
